# rust-webapp

./: .gitignore  Cargo.toml  Dockerfile  go.mod
cmd/: main.go
internal/app/repository/: repo.go
src/: main.rs  mod.rs
src/adapters/: mod.rs
src/adapters/kafka_driver/: adapter.rs
src/adapters/kafka_settings/: adapter.rs
src/adapters/redis_driver/: adapter.rs
src/drivers/kafka/: interface.rs  kafka.rs  mod.rs
src/drivers/redis/: interface.rs  mod.rs  redis.rs
src/libs/: channel.rs  mod.rs  repository.rs  settings.rs
src/usecases/: mod.rs
src/usecases/kafka/: error.rs  handler.rs  interface.rs  mod.rs
src/usecases/kafka_db/: error.rs  handler.rs
