[package]
name = "rust-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.34.0", features = ["full"] }
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["serde_derive"] }
